[tool.poetry]
name = "russia-non-workdays"
version = "0.1.0"
description = ""
authors = ["Artem Belov <artem.al.belov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
business-python = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
